--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 
 <head>
 <title> Muhammet Eray Akbas's Github Page </title>
+	<style type="text/css">
 	
 		<link rel = "stylesheet" type = "text/css" href = "15_11_2021.css" />
+		
+	</style>
 		
 		
 		
